prevent overflow

--- a/src/components/posts/posts.scss
+++ b/src/components/posts/posts.scss
@@ -1,6 +1,7 @@
 .posts{
     flex:6;
     height: 100vh;
+    overflow-y: auto;
     display: flex;
     flex-direction: column;
 }
